DDF-2644 Fix overflow issue in workspace menu, cursor on workspace template items

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-menu/workspace-menu.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-menu/workspace-menu.less
@@ -31,6 +31,7 @@
   }
 
   > .menu-content > .content-title {
+    overflow: hidden;
   }
 
   > .menu-details > .details-buttons {
